# Finansal-Analist

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
data/: tweet_paste_template.txt
docs/: repo-metadata.md  share-copy.md
examples/: quantscience_red_report.md  quantscience_red_summary.json
scripts/: refresh_examples.ps1
tests/: test_audit.py  test_parser.py
tests/fixtures/: sample_tweet_html.html  sample_tweet_oembed.json  sample_tweet_syndication.json
tweet_reader/: __init__.py  audit.py  cli.py  fetch.py  models.py  parse.py  render.py  summarize.py
